pod-security-policy/restrict-pod-annotations/examples/annotation-permitted.yaml
# Assert: 
#   Istio = yes
#   namespace purpose : solution
#   no istio annotation
# result pass 
apiVersion: v1
kind: Pod
metadata:  
  name: delta
  namespace: deltaquadrant
  labels:
    app.kubernetes.io/instance: delta-webapp
  annotations:
    prometheus.io/path: /stats/prometheus
    prometheus.io/port: '15020'
    prometheus.io/scrape: 'true'
