pod-security-policy/restrict-pod-annotations/examples/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: RestrictPodAnnotations
metadata:
  name: restrict-pod-annotations
spec:
  match:
    namespaceSelector:
      matchExpressions:
        - key: namespace.ssc-spc.gc.ca/purpose
          operator: In
          values:
            - solution
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    annotations:
    - galley.istio.io/analyze-suppress
    - inject.istio.io/templates
    - istio.io/rev
    - proxy.istio.io/config
    - sidecar.istio.io/inject
    - sidecar.istio.io/controlPlaneAuthPolicy
    - sidecar.istio.io/discoveryAddress
    - sidecar.istio.io/bootstrapOverride
    - traffic.sidecar.istio.io/excludeInboundPorts
    - traffic.istio.io/nodeSelector
    - sidecar.istio.io/proxyImage
    - sidecar.istio.io/proxyImageType
    - sidecar.istio.io/userVolume
    - sidecar.istio.io/userVolumeMount
    - status.sidecar.istio.io/port
