pod-security-policy/restrict-pod-annotations/examples/solution-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: deltaquadrant
  labels:
    namespace.ssc-spc.gc.ca/purpose: solution
